Fix buttons text truncated in charts

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -116,6 +116,14 @@ ul {
         margin: 0;
         word-break: break-all;
     }
+
+    .panel-body {
+        padding: 5px;
+    }
+
+    .panel-body p.btn-group {
+        padding: 0;
+    }
 }
 
 .main-container ul li {
